Додобавлены модели для контроллеров запросы и ответы, фикс get запросов, сделаны временные фантомные запросы

--- a/Walkiria.Restrictions/Walkiria.Restricitons.Web/appsettings.json
+++ b/Walkiria.Restrictions/Walkiria.Restricitons.Web/appsettings.json
@@ -3,9 +3,12 @@
     "RestrictionDataContext": "connection here"
   },
 
-  "MongoDb": {
-    "RestrictionDataContextDbName": "dbName"
-  }
+  "Jwt": {
+    "Issure": "<jwt issure here>",
+    "Audience": "<jwt audience here>",
+    "Expires": "<jwt expires here>",
+    "SecretKey": "<jwt secret key here>"
+  },
 
   "Logging": {
     "LogLevel": {
