--- a/Walkiria.Restrictions/Walkiria.Restricitons.Web/Walkiria.Restricitons.Web.csproj
+++ b/Walkiria.Restrictions/Walkiria.Restricitons.Web/Walkiria.Restricitons.Web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,11 +20,6 @@
     <ProjectReference Include="..\Walkiria.Restrictions.DataContext\Walkiria.Restrictions.DataContext.csproj" />
     <ProjectReference Include="..\Walkiria.Restrictions.Interfaces\Walkiria.Restrictions.Interfaces.csproj" />
     <ProjectReference Include="..\Walkiria.Restrictions.Services\Walkiria.Restrictions.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Warns\" />
-    <Folder Include="Models\Mutes\" />
   </ItemGroup>
 
 </Project>
