Добавлен GroupTgId, docker-compose.yml, сделана миграция, доделана логика в сервисах, убраны фантомные ответы

--- a/Walkiria.Restrictions/Walkiria.Restricitons.Web/appsettings.json
+++ b/Walkiria.Restrictions/Walkiria.Restricitons.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RestrictionDataContext": "connection here"
+    "RestrictionDataContext": "Host=localhost;Port=5432;Database=walkiria_restrictions;User=postgres;Password=postgres;"
   },
 
   "Jwt": {
