--- a/Walkiria.Restrictions/Walkiria.Restrictions.Services/Walkiria.Restrictions.Services.csproj
+++ b/Walkiria.Restrictions/Walkiria.Restrictions.Services/Walkiria.Restrictions.Services.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Walkiria.Restrictions.Interfaces\Walkiria.Restrictions.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
