--- a/Walkiria.Restrictions/Walkiria.Restricitons.Web/Walkiria.Restricitons.Web.csproj
+++ b/Walkiria.Restrictions/Walkiria.Restricitons.Web/Walkiria.Restricitons.Web.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
 	  <PackageReference Include="Quartz" Version="3.11.0" />
 	  <PackageReference Include="Quartz.Extensions.Hosting" Version="3.11.0" />
@@ -20,6 +24,10 @@
     <ProjectReference Include="..\Walkiria.Restrictions.DataContext\Walkiria.Restrictions.DataContext.csproj" />
     <ProjectReference Include="..\Walkiria.Restrictions.Interfaces\Walkiria.Restrictions.Interfaces.csproj" />
     <ProjectReference Include="..\Walkiria.Restrictions.Services\Walkiria.Restrictions.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
